crates/swc_ecma_parser/tests/typescript-errors/nullish-coalescing-operator/no-paren-nullish-and/input.ts.stderr
error: Nullish coalescing operator(??) requires parens when mixing with logical operators
 --> $DIR/tests/typescript-errors/nullish-coalescing-operator/no-paren-nullish-and/input.ts:1:6
  |
1 | a ?? b && c;
  |      ^^^^^^

